--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
     "url": "https://github.com/liam-mcallister/storage-site"
   },
   "author": "Liam McAllister",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-terser": "^2.0.1"
+  }
 }
